# rumik

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
docs/: analytics.md  gap_analysis.md  high_level.md  indexes.md  low_level.md  perf.md  report.md  schema.md  seed_distribution.md  state_machines.md
scripts/: mongo_indexes.py  queries.py  seed_mongo.py
services/common/: __init__.py  analytics.py  app_factory.py  http.py  logging.py  mongo.py  rate_limit.py  redis_client.py  repos.py  request_context.py  safety.py
services/router/app/: __init__.py  main.py  pools.py  tier_router.py
services/seeder/app/: __init__.py  main.py
services/worker_overflow/app/: __init__.py  main.py
services/worker_priority/app/: __init__.py  main.py
services/worker_standard/app/: __init__.py  main.py
tests/: test_e2e.py  test_load.py
tests/unit/: fake_redis.py  test_pool_manager_unit.py  test_rate_limit_unit.py  test_tier_router_unit.py
