[tool.poetry]
name = "ira-ai-gateway"
version = "0.1.0"
description = "Ira AI Gateway assignment scaffold (router + worker pools + seeder)."
authors = ["You <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.115.6"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
motor = "^3.7.0"
pymongo = "^4.14.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


